// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExternalLink /> ExternalLink - default 1`] = `
<a
  href="https://www.keboola.com"
  rel="noopener noreferrer"
  target="_blank"
>
  keboola.com
</a>
`;

exports[`<ExternalLink /> ExternalLink - disabled 1`] = `
<a
  disabled={true}
  href="https://www.keboola.com"
  rel="noopener noreferrer"
  target="_blank"
>
  keboola.com
</a>
`;

exports[`<ExternalLink /> ExternalLink - onClick 1`] = `
<a
  href="https://www.keboola.com"
  onClick={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  keboola.com
</a>
`;

exports[`<ExternalLink /> ExternalLink - with classname 1`] = `
<a
  className="btn btn-link"
  href="https://www.keboola.com"
  rel="noopener noreferrer"
  target="_blank"
>
  keboola.com
</a>
`;
